forecast/frontend/assets/sass/front-page.scss
@forward "uswds-theme";
@forward "uswds";
@forward "uswds-theme-custom-styles";
@use "uswds-core" as *;
@use "sass:math";
@use "components/frontpage";
@use "components/beta-banner";
@use "components/colors";
@use "components/icons";
@use "components/location-search";
@use "components/listbox";
@use "components/combobox";
@use "components/saved-locations";
@use "components/typography-mono";
@use "components/typography-heading";
@use "components/usa-identifier";
@use "components/utilities";
@use "components/variables";
@use "components/usa-prose-overrides";
@use "components/site-navigation";
@use "components/wx-loader";
@use "components/touchpoints";
@use "components/generic-tabs";
@use "components/tabbed-nav";
@use "components/z-index";

:root {
  --find-forecast-background-rgb: 17, 24, 29;
  --stats-area-image-max-height: 300px;
  --trapezoid-triangle-length: 20%;
  --trapezoid-height-mobile: 160px;
}

$trapezoid-wrapper-height: 420px;
/* stylelint-disable */
#front-find-forecast-section {
  background-image: url("/public/images/front-page/backgrounds/wx_glacier_1440_70_cr.jpg");

  /* If the browser does not support image-set, try just checking for webp support */
  @supports (
    background-image:
      url("/public/images/front-page/backgrounds/wx_glacier_1440_60_cr.webp")
  ) {
    background-image: url("/public/images/front-page/backgrounds/wx_glacier_1440_60_cr.webp");
  }

  /* If the browser supports image-set, use that method */
  @supports (
    background-image: image-set(
        url("/public/images/front-page/backgrounds/wx_glacier_1440_70_cr.jpg")
          type("image/jpeg")
      )
  ) {
    background-image: image-set(
      url("/public/images/front-page/backgrounds/wx_glacier_1440_60_cr.webp")
        type("image/webp"),
      url("/public/images/front-page/backgrounds/wx_glacier_1440_70_cr.jpg")
        type("image/jpeg")
    );
  }

  background-size: cover;
  background-position: center;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding-top: 40px;
  padding-bottom: 40px;

  /* mobile only
     * remove padding on grid container
     */
  > .grid-container {
    padding-left: 0;
    padding-right: 0;
  }

  .find-block-wrapper {
    background-color: rgba(var(--find-forecast-background-rgb), 0.45);
    display: flex;
    flex-direction: column; /* desktop value */
    padding: units(2); /* mobile value */
    padding-bottom: 0;
    position: relative;

    > h2 {
      @include u-font-family("sans");
      @include u-text("light");

      font-size: 2.625rem;
      line-height: 1.15;
      text-align: center;
      margin: 0;
      margin-bottom: units("105");
      color: white;
    }

    .use-location-area {
      display: flex;
      align-items: center;
      justify-content: center;
      color: white;
      flex-wrap: wrap;

      @include u-font-family("sans");

      /* mobile only (I think) */
      font-size: 0.875rem;

      > .location-area-divider {
        margin-left: units("105");
        margin-right: units("105");
      }

      > button {
        @extend .usa-button--unstyled;
        @extend .wx-button--unstyled-light;
      }

      > label.usa-label {
        margin-top: 0;
        color: white;

        /* mobile only (I think) */
        font-size: 0.875rem;
      }
    }

    wx-combo-box-location {
      max-width: unset;
      margin-top: units("105");
    }

    wx-loader {
      margin-top: units(2);
      color: white;
    }
  }
}

#front-trapezoids {
  background-color: color("base-lightest");
  background-image: url("/public/images/front-page/wx_homepage_wind-pattern.svg");
  background-repeat: repeat;

  .trapezoids-container {
    display: block;
    position: relative;
    width: 100%;

    /* Modify TODO */
    padding: units(4) 0
      calc(units(4) + calc(var(--trapezoid-height-mobile) / 2));

    /* Override grid-container y-padding
         */

    /* For mobile, the bottom padding
         * needs to be whatever the padding we want
         * is, plus half the --trapezoid-height-mobile.
         * This is because the image element is absolutely
         * positioned, so we need to account for it's offset.
         */
  }

  .trapezoid-slant {
    display: none;
  }
}

.trapezoid-wrapper {
  flex: 1;
  display: block;
  position: relative;
}

#tagline-trapezoid {
  display: flex;
  position: relative;
  flex: 1;
  line-height: 1.15;
  width: 100%;
  max-height: var(--trapezoid-height-mobile);
  background-color: color("primary-darkest");
  z-index: 1;
  clip-path: polygon(
    0% 0%,
    calc(100% - var(--trapezoid-triangle-length)) 0%,
    100% 100%,
    0% 100%
  );

  margin-top: 0;
  margin-bottom: 0;

  .trapezoid-inner {
    display: block;

    /* Using the padding-right method */
    padding: units("205");
    padding-right: var(--trapezoid-triangle-length);
    color: white;
  }

  span {
    display: block;
    position: relative;
  }

  span:first-child {
    color: color("primary-lighter");
    font-weight: 400;
    font-size: 2rem;
  }

  span:last-child {
    @include u-text("light");

    color: color("primary-lightest");

    /* mobile only */
    font-size: 1.5rem;
  }
}
/* ... */

